@@ -2,6 +2,7 @@ v3.7.3:
  Users:
   - Import TS: fix the heterogeneous set of TS validation using a range of angles.
   - Join heterogeneous sets are possible for tomography objects TS and tomograms.
+  - Fix the protocol tomograms to micrographs. Helps enhanced. ImageHandler replaced by mrcfile.
  Developers:
   - Attribute _acquisition is initialized as None in TSBase, so the coppyAttributes callen in protocol for joining.
     sets work properly. The same whith the attribute _origin.
